tests/cases/pass/do_while.cs
class Program {
    static void Main() {
        int i = 0;
        do {
            Console.WriteLine(i);
            i = i + 1;
        } while (i < 3);
    }
}
