tests/cases/fail/division_by_zero_runtime.cs
class Program {
    static void Main() {
        int x = 10 / 0;
        Console.WriteLine(x);
    }
}
